--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/R.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!--OPEN GRAPH-->
+  <meta name="og:url" content="https://samuelefrni-new-york-times.netlify.app/">
+  <meta name="og:title" content="New York Times">
+  <meta name="og:image" content="">
+  <meta name="description" content="A clone page of the New York Times created by Samuele Furnari">
+
+  <!--TWITTER CARDS-->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="https://samuelefrni-new-york-times.netlify.app/">
+  <meta name="twitter:title" content="New York Times">
+  <meta name="twitter:image" content="">
+  <meta name="twitter:description" content="A clone page of the New York Times created by Samuele Furnari">
+
+  <title>The New York Times | Samuele Furnari</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
